# medical_data_analytics_platform

./: CMakeLists.txt  Dockerfile  README.md  clickable_label.cpp  clickable_label.h  csv_reader.h  heatmap_legend.h  heatmap_widget.cpp  legend.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiselect_combobox.cpp  self-evaluation.xlsx  ui_mainwindow.h
algorithms/: common.h  covariance.hpp  dbscan.hpp  mean_shift.hpp  normalise.hpp  pca.hpp  rowfeature.hpp  spectral.hpp  xgboost_example.h
media/: diagram.drawio
src/: csv_reader.h  heatmap_legend.cpp  heatmap_widget.cpp  heatmap_widget.h  legend.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiselect_combobox.h  ui_mainwindow.h
src/algorithms/: common.h  dbscan.hpp  kmeans.hpp  leastsquare.hpp  mean_shift.hpp  normalise.hpp  spectral.hpp  xgboost_example.h
